fix css style issue, on smaller screens, so list item text is aligned left but add button is centered when pushed below input

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,10 @@ input[type="checkbox"]:checked::before {
         text-align: center;
     }
 
+    li {
+        text-align: left;
+    }
+
     /* when button gets pushed below input, makes sure there is space above button */
     .add-button {
         margin-top: 1rem;
